adding db connection, ORM, models
