# Encrypt_project/password_encryption/api/password_handle.py
@@ -1,17 +1,20 @@
-
-from flask import Flask
 from flask_injector import inject
-from password_encryption.service.provider import Users_details
-import connexion
-
+from Flask_projects.Encrypt_project.password_encryption.service.provider import Users_details
 
 
 @inject
 def Users(user_provider: Users_details) -> list:
-#def Users():
-    import pdb; pdb.set_trace()
-    #return Users_details.get({"name": "sd"})
-    return Users_details.get()
+    print("Inside the users!!!")
+    return user_provider.get()
 
 
+@inject
+def User(username, user_provider: Users_details) -> list:
+    print("Inside the user!!!")
+    return user_provider.get_username(username)
 
+
+@inject
+def User_create(user_provider: Users_details) -> list:
+
+    return user_provider.create()
