# Encrypt_project/password_encryption/swagger/user_password.yaml
@@ -40,28 +40,29 @@ paths:
           description: "Unauthorized"
         404:
           description: "Not found"
-#  /user/{username}:
-#    get:
-#      tags:
-#      - "users"
-#      summary: "list user and password"
-#      description: ""
-#      produces:
-#      - "application/xml"
-#      - "application/json"
-#      parameters:
-#      - name: "username"
-#        in: "path"
-#        description: "The name that needs to be fetched. Use user1 for testing. "
-#        required: true
-#        type: "string"
-#      responses:
-#        200:
-#          description: "successful"
-#        401:
-#          description: "Unauthorized"
-#        404:
-#          description: "Not found"
+  /user/{username}:
+    get:
+      tags:
+      - "users"
+      summary: "list user and password"
+      description: ""
+      operationId: password_encryption.api.password_handle.User
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "username"
+        in: "path"
+        description: "The name that needs to be fetched. Use user1 for testing. "
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Not found"
 #  /user/decrypt/{username}:
 #    get:
 #      tags:
@@ -90,7 +91,7 @@ paths:
 #      - "users"
 #      summary: "Add a new user and password"
 #      description: ""
-#      # operationId: "addUser"
+#       operationId: password_encryption.api.password_handle.User_create
 #      consumes:
 #      - "application/json"
 #      - "application/xml"
@@ -149,17 +150,17 @@ paths:
 #        405:
 #          description: "Invalid input"
 definitions:
-  # Userdel:
-  #   type: "object"
-  #   properties:
-  #     # id:
-  #     #   type: "integer"
-  #     #   format: "int64"
-  #     user:
-  #       type: "string"
-  #       # format: "int64"
-  #     group:
-  #       type: "string"
+  Userdel:
+     type: "object"
+     properties:
+       # id:
+       #   type: "integer"
+       #   format: "int64"
+       user:
+         type: "string"
+         # format: "int64"
+       group:
+         type: "string"
   User:
     type: "object"
     properties:
